Refactored Save
Used GSON to save the file into json format